feat: 글쓰기 기능 구현
- 프론트엔드 글쓰기 페이지 form으로 작업
- 백엔드와 SQLite를 연동해서 이미지 및 데이터를 업로드하는 기능 구현

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Market-clone</title>
     <link
       rel="stylesheet"
       as="style"
@@ -40,7 +40,7 @@
     </header>
 
     <main>
-      <div class="item-list">
+      <!-- <div class="item-list">
         <div class="item-list__img">
           <img src="assets/image.svg" alt="image" />
         </div>
@@ -49,58 +49,8 @@
           <div class="item-list__info-meta">역삼동 19초 전</div>
           <div class="item-list__info-price">100만원</div>
         </div>
-      </div>
-      <div class="item-list">
-        <div class="item-list__img">
-          <img src="assets/image.svg" alt="image" />
-        </div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 PC 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="item-list">
-        <div class="item-list__img">
-          <img src="assets/image.svg" alt="image" />
-        </div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 PC 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="item-list">
-        <div class="item-list__img">
-          <img src="assets/image.svg" alt="image" />
-        </div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 PC 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="item-list">
-        <div class="item-list__img">
-          <img src="assets/image.svg" alt="image" />
-        </div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 PC 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="item-list">
-        <div class="item-list__img">
-          <img src="assets/image.svg" alt="image" />
-        </div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 PC 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="write-btn">+ 글쓰기</div>
+      </div> -->
+      <a class="write-btn" href="write.html">+ 글쓰기</a>
     </main>
 
     <footer>
@@ -139,5 +89,6 @@
     </footer>
 
     <div class="media-info-msg">화면 사이즈를 줄여주세요!</div>
+    <script src="index.js"></script>
   </body>
 </html>
