--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,7 +6,7 @@
     <title>로그인</title>
   </head>
   <body>
-    <form id="signup-form" action="/signup" method="POST">
+    <form id="login-form" action="/signup" method="POST">
       <div>로그인</div>
       <div>
         <label for="id">아이디</label>
@@ -19,6 +19,10 @@
       <div>
         <button type="submit">로그인</button>
       </div>
+      <div id="info"></div>
     </form>
+    <!--SHA256 호출-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.min.js"></script>
+    <script src="login.js"></script>
   </body>
 </html>
